istio-expert/labs/03/purchase-history-service-exportto.yaml
apiVersion: v1
kind: Service
metadata:
  name: purchase-history
  annotations:
    networking.istio.io/exportTo: ".,recommendation-ns" 
spec:
  selector:
    app: purchase-history
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
