istio-expert/labs/03/ratings.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings
  labels:
    app: ratings
spec:
  replicas: 1
  selector:
    matchLabels:
        app: ratings
  template:
    metadata:
      labels:
        app: ratings
      annotations:
    spec:
      serviceAccountName: ratings   
      containers:
      - name: purchase-history
        image: nicholasjackson/fake-service:v0.7.8
        ports:
        - containerPort: 8080
---
# Service to expose ratings frontend

apiVersion: v1
kind: Service
metadata:
  name: ratings
spec:
  selector:
    app: ratings
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
