istio-expert/labs/03/ratings-gw-https.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ratings-gateway
  namespace: istioinaction
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "ratings-ns/ratings.istioinaction.io"    
    tls:
      mode: SIMPLE
      credentialName: ratings-cert
