istio-expert/labs/03/recommendation-gw-https.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: recommendation-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "recommendation/recommendation.istioinaction.io"    
    tls:
      mode: SIMPLE
      credentialName: recommendation-cert
