istio-expert/labs/03/web-api-gw-https.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: web-api-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "web-api/web-api.istioinaction.io"    
    tls:
      mode: SIMPLE
      credentialName: web-api-cert
