istio-expert/labs/03/recommendation-se-exportto.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: recommendation-se
  namespace: recommendation-ns
spec:
  hosts:
    - recommendation.istioinaction.io
  exportTo:
  - web-api-ns
  location: MESH_INTERNAL
  ports:
    - name: http
      number: 80
      protocol: http
      targetPort: 8080
  resolution: STATIC
  workloadSelector:
    labels:
      app: recommendation
