istio-expert/labs/03/recommendation-se.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: recommendation-global-host
  namespace: recommendation-ns
spec:
  hosts:
    - recommendation.istioinaction.io
  location: MESH_INTERNAL
  ports:
    - name: http
      number: 8080
      protocol: http
  resolution: STATIC
  workloadSelector:
    labels:
      app: recommendation
