istio-expert/labs/03/sidecar-team-a.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default
spec:
  egress:
  - hosts:
    - "./*"    
    - "istio-system/*"  
    - "recommendation-ns/*"
