istio-expert/labs/03/sidecar-team-b.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default
spec:
  egress:
  - hosts:
    - "istio-system/*"
    - "istio-ingress/*"
    - "recommendation-ns/*"
    - "purchase-history-ns/*"
    ports:
      number: 8080
      protocol: HTTP
      name: egresshttp
