istio-expert/labs/03/sidecar-team-c.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default
spec:
  egress:
  - hosts:
    - "./*"    
    - "istio-system/*"
    - "istio-ingress/*"
    ports:
      number: 8080
      protocol: HTTP
      name: egresshttp
