istio-expert/labs/03/web-api-vs-exportto.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: web-api-vs
  namespace: web-api-ns
spec:
  hosts:
  - "web-api.istioinaction.io"
  gateways:
  - istio-ingress/web-api-gateway
  exportTo:
  - istio-ingress
  http:
  - route:
    - destination:
        host: web-api.web-api-ns.svc.cluster.local
